style.css
body{
    background-color: beige;
    margin: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    overflow-x: hidden;
}

a{
    padding: 0.5rem;
    margin: 0.5rem;
    font-size: 2rem;
    flex: 1;
    text-align: center;
    border: solid gold 0.10rem;
    border-radius: 25px;
}

a:hover{
    background-color: #800080;
    border-radius: 25px;
    cursor: pointer;
    transition: background-color 0.5s; 
}

.sticky-header{
    background-color: #330033;
    color: whitesmoke;
    font-family: 'Almendra Display';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 9999;
    opacity: 0;
    visibility: hidden;
    transition: all 0.5s ease-in-out;
    transform: translateY(-100%);
}

.sticky-header.visible{
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.sticky-header.docked {
    position: static;
    transform: none;
}

.logo{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    color: gold;
}

.links{
    background-color: #4d004d;
    display: flex;
    justify-content: space-evenly;
}

.logo-text{
    flex: 1;
    font-weight: lighter;
    margin: 0;
}

#logo-img{
    text-align: center;
}

#u{
    text-align: end;
    font-size: 3rem;
    font-weight: bold;
}

#e{
    text-align: start;
    font-size: 7rem;
}

.divider{
    height: 1rem;
    background-color: black;
    border: solid #1a001a 0.05rem;
}

#myCarousel {
    width: 100%;
    height: 100vh;
    margin: 0rem auto;
    overflow: hidden;
    background-color: #333333;
}

.carousel-inner {
    width: 100%;
    height: 100%;
}

.carousel-item {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.carousel-item img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    background-color: #000;
    border-radius: 30%;
    height: 5rem;
    width: 5rem;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    z-index: 5;
}

.carousel-control-prev-icon {
    left: 5rem;
}

.carousel-control-next-icon {
    right: 5rem;
}

.carousel-control-prev,
.carousel-control-next {
    height: 100%;
    opacity: 1;
    width: auto;
}

.carousel-indicators li {
    background-color: #fff;
    border: 1px solid #000;
    border-radius: 50%;
    height: 2rem;
    width: 2rem;
}

.carousel-indicators .active {
    background-color: #000;
}

@media (max-width: 767px) {
    .logo {
        flex-direction: column;
    }
    .links {
        flex-direction: column;
    }
    #u, #e {
        font-size: 1rem;
    }
}

